fix: contactSchema
